# AIAssistantChatCDP

./: .replit  README.md  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
attached_assets/: Pasted-Assignment-2-Building-a-Support-Agent-Chatbot-for-CDP-How-to-Questions-Objective-Develop-a-ch-1740738984009.txt
backend/: Dockerfile  chat_processor.py  document_processor.py  main.py  requirements.txt
frontend/: app.py  requirements.txt  styles.css
