[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.10.0",
    "fastapi>=0.115.9",
    "langchain-community>=0.3.18",
    "langchain>=0.3.19",
    "openai>=1.65.1",
    "sse-starlette>=2.2.1",
    "sseclient-py>=1.8.0",
    "streamlit>=1.42.2",
    "uvicorn>=0.34.0",
]
